--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
       - '--cpu=1'
       - '--memory=1024Mi'
       - '--allow-unauthenticated'
-      - '--set-secrets=DB_NAME=DB_NAME:latest,DB_USER=DB_USER:latest,DB_PASSWORD=DB_PASSWORD:latest,DB_HOST=DB_HOST:latest,DB_DIALECT=DB_DIALECT:latest,ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET:latest,REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET:latest'
+      - '--set-secrets=MYSQL_DB=MYSQL_DB:latest,MYSQL_USER=MYSQL_USER:latest,DB_PASSWORD=DB_PASSWORD:latest,MYSQL_HOST=MYSQL_HOST:latest,JWT_SECRET_KEY=JWT_SECRET_KEY:latest,GCS_KEY_PATH=GCS_KEY_PATH:latest,GCS_BUCKET_NAME=GCS_BUCKET_NAME:latest'
 images:
   - 'gcr.io/$PROJECT_ID/kawanua-detection:$COMMIT_SHA'
 logsBucket: 'gs://kawanua-detection/logs'
